# Nenebot

./: .gitattributes  .gitignore  README.md
catcher/: go.mod  (+3 more)
lunabot/: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
lunabot/config/: alive.yaml  global.yaml  helper.yaml
lunabot/config/chat/: autochat.yaml
lunabot/config/llm/: llm.yaml  model_preset.yaml
lunabot/config/llm/providers/: google.yaml  siliconflow.yaml
lunabot/config/sekai/: asset.yaml  gameapi.yaml  music_alias_sync.yaml  sekai.yaml  upload_help.txt
lunabot/example_config/: alive.yaml  chatroom.yaml  gallery.yaml  global.yaml  helper.yaml
lunabot/example_config/chat/: autochat.yaml
lunabot/example_config/llm/: model_preset.yaml
lunabot/example_config/llm/providers/: ai-yyds.yaml  google.yaml  new-api.yaml  openrouter.yaml  siliconflow.yaml
lunabot/example_config/sekai/: bonds_honor_sd_face_pos.yaml  character_birthday.yaml  gameapi.yaml  sekai.yaml
lunabot/example_config/sekai/bg_preset/: blue.yaml  red.yaml
lunabot/helps/: chat.md  gallery.md  general.md  imgexp.md  imgtool.md  main.md  math.md  sekai.md  sta.md  water.md
lunabot/src/pjsekai/: LICENSE  README.md
lunabot/src/pjsekai/scores/: __init__.py  __main__.py  drawing.py  line.py  lyric.py  meta.py  rebase.py  score.py
lunabot/src/plugins/alive/: __init__.py
lunabot/src/plugins/bird/: __init__.py
lunabot/src/plugins/broadcast/: __init__.py
lunabot/src/plugins/chat/: __init__.py  autochat.py
lunabot/src/plugins/chatroom/: __init__.py
lunabot/src/scripts/: compile_imgtool_cpp.sh  imgtool.cpp
(+336 files in other folders)
